  * Add fix for Debian bug #374038 - Make it clear that shutdown -c can
    only cancel a waiting shutdown, not an active one.
  * Add note to pidof manual page about the use of readlink(2). Patch by
    Bill Nottingham and Fedora.
  * Add changes for Debian bug #68621 - Add PAM support for programs spawned
    by init on the console like sulogin. Based on patch by Topi Miettinen.

 -- Petter Reinholdtsen <pere@hungry.com>  Sun, 12 Jul 2009 19:58:10 +0200

sysvinit (2.87dsf) world; urgency=low

  * Fix typos and do minor updates in the manual pages.
  * Correct section of mountpoint(1).
  * Document -e and -t options for telinit in init(8).
  * Update address of FSF in the COPYRIGHT file.
  * Document in halt(8) that -n might not disable all syncing.
    Patch by Bill Nottingham and Fedora
  * Adjust output from "last -x".  In reboot lines, print endpoint
    of uptime too.  In shutdown lines print downtimes rather than
    the time between downs.  Fix typo in string compare in last.c.
    Patch by Thomas Hood.
  * Improve handling of IPv6 addresses in last.  Patch from Fedora.
  * Document last options in usage information, previously only
    mentioned in the manual page.
  * Add new option -F to last, to output full date string instead
    of the short form provided by default.  Patch from Olaf Dabrunz
    and SuSe.
  * Adjust build rules to make sure the installed binaries
    are stripped.
  * Increase the compiler warning level when building.
  * Fix utmp/wtmp updating on 64-bit platforms.  Patch by Bill
    Nottingham and Fedora.
  * Avoid unchecked return value from malloc() in utmpdump.
    Patch from Christian 'Dr. Disk' Hechelmann and Fedora.
  * Make sure to use execle and no execl when passing environment to
    the new process.  Patch from RedHat.
  * Correct init to make sure the waiting status is preserved across
    re-exec.  Patch from RedHat.
  * Correct init to avoid race condition when starting programs during
    boot.  Patch from SuSe.